cluster/beekeeper/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beekeeper-frontend
    component: frontend
    part-of: beehive
    project: beekeeper
    confidentiality: not-defined
    compliance: not-defined
  name: beekeeper-frontend
  namespace: beekeeper
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_hide_header X-Content-Type-Options;
    nginx.ingress.kubernetes.io/server-snippet: |
      more_clear_headers 'X-Content-Type-Options';
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: beekeeper-frontend
  template:
    metadata:
      labels:
        app: beekeeper-frontend
        component: frontend
        part-of: beehive
        project: beekeeper
        confidentiality: not-defined
        compliance: not-defined
    spec:
      imagePullSecrets:
        - name: beekeeper-pull-token
      containers:
        - name: webserver
          image: registry.login.no/tekkom/web/beehive/beekeeper/frontend:1.5.15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: 3000tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: 512Mi
              cpu: 512m
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - beekeeper-frontend
                topologyKey: kubernetes.io/hostname
